exports[`no-empty-function > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-function",
      "messageId": "unexpected",
      "message": "Unexpected empty constructor.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 29
        },
        "end": {
          "line": 3,
          "column": 30
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-empty-function > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-function",
      "messageId": "unexpected",
      "message": "Unexpected empty method 'otherMethod'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 29
        },
        "end": {
          "line": 3,
          "column": 30
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-empty-function > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-function",
      "messageId": "unexpected",
      "message": "Unexpected empty constructor.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 25
        },
        "end": {
          "line": 3,
          "column": 26
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-empty-function > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-function",
      "messageId": "unexpected",
      "message": "Unexpected empty constructor.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 27
        },
        "end": {
          "line": 3,
          "column": 28
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-empty-function > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-function",
      "messageId": "unexpected",
      "message": "Unexpected empty function 'foo'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 16
        },
        "end": {
          "line": 2,
          "column": 17
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-empty-function > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-function",
      "messageId": "unexpected",
      "message": "Unexpected empty method 'foo'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 9
        },
        "end": {
          "line": 4,
          "column": 10
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-empty-function > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-function",
      "messageId": "unexpected",
      "message": "Unexpected empty method 'foo'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 18
        },
        "end": {
          "line": 3,
          "column": 19
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-empty-function > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-function",
      "messageId": "unexpected",
      "message": "Unexpected empty arrow function 'foo'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 19
        },
        "end": {
          "line": 1,
          "column": 20
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-empty-function > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-function",
      "messageId": "unexpected",
      "message": "Unexpected empty function 'foo'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 17
        },
        "end": {
          "line": 1,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-empty-function > invalid 10`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-function",
      "messageId": "unexpected",
      "message": "Unexpected empty method 'method'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 13
        },
        "end": {
          "line": 3,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-empty-function > invalid 11`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-function",
      "messageId": "unexpected",
      "message": "Unexpected empty getter 'foo'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 13
        },
        "end": {
          "line": 3,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-empty-function > invalid 12`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-function",
      "messageId": "unexpected",
      "message": "Unexpected empty setter 'foo'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 18
        },
        "end": {
          "line": 3,
          "column": 19
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-empty-function > invalid 13`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-function",
      "messageId": "unexpected",
      "message": "Unexpected empty function 'foo'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 22
        },
        "end": {
          "line": 1,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-empty-function > invalid 14`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-empty-function",
      "messageId": "unexpected",
      "message": "Unexpected empty method 'method'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 18
        },
        "end": {
          "line": 3,
          "column": 19
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;
